[package]
name = "rust-sokoban"
version = "0.1.0"
authors = ["David Corticchiato <david.corticchiato@gmail.com>"]

[dependencies]
piston = "0.35.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
piston-texture = "0.6.0"
piston-viewport = "0.3.0"
find_folder = "0.3.0"
